<resources>
    <string name="app_name">Cars</string>

    <!-- Splash Screen Activity -->
    <string name="splash_description">Welcome image</string>

    <!-- Login Fragment -->
    <string name="login_title_text_view">Bienvenido</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="login_button">Ingresar</string>
    <string name="sign_up_link_text_view">Registrarse</string>

    <!-- SignUp Fragment -->
    <string name="sign_up_title_text_view">Ingrese sus datos</string>
    <string name="user_name_edit_text">User name</string>
    <string name="register_button">Enviar</string>

    <!-- List Item -->
    <string name="car_model">Model: %1$s</string>
    <string name="car_image_description">Car\'s image</string>

    <!-- Details Fragment -->
    <string name="car_brand">Brand: %1$s</string>
    <string name="car_year">Year: %1$d</string>
    <string name="car_description">Description: %1$s</string>

    <!-- Map Fragment -->
    <string name="latitude_text">Latitud: %1$s</string>
    <string name="longitude_text">Longitud: %1$s</string>

    <!-- Toolbar Menu -->
    <string name="menu_edit">Edit</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>

    <!-- Bottom Navigation Menu -->
    <string name="menu_whatsapp">WhatsApp</string>
    <string name="menu_phone">Phone</string>

    <!-- Dialog Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title">¿Esta seguro que desea eliminar el item?</string>

    <!-- Edit Dialog Fragment -->
    <string name="brand_dialog_text">Escribe la marca</string>
    <string name="brand_dialog_input">%1$s</string>
    <string name="model_dialog_text">Escribe el modelo</string>
    <string name="model_dialog_input">%1$s</string>
    <string name="year_dialog_text">Escribe el año</string>
    <string name="year_dialog_input">%1$d</string>
    <string name="description_dialog_text">Escribe la descripcion</string>
    <string name="description_dialog_input">%1$s</string>

    <!-- Tab Names -->
    <string name="details_tab">Detalles</string>
    <string name="gallery_tab">Galeria</string>
    <string name="map_tab">Mapa</string>

    <!-- Setting Activity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="screen">Pantalla</string>
    <string name="permissions">Permisos</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="screen_mode_title">Tema</string>

    <!-- Sync Preferences -->
    <string name="edit_title">Habilitar edicion de items</string>
    <string name="edit_summary_on">Puede editar todos los campos del item</string>
    <string name="delete_title">Eliminar items</string>
    <string name="delete_summary_on">Se puede eliminar el item al presionar Aceptar</string>
    <string name="delete_summary_off">No se puede eliminar los items de la lista</string>
    <string name="photo_profile">Foto de perfil</string>
    <string name="drawer_profile_text">Perfil</string>
    <string name="drawer_sign_out_text">Salir</string>
    <string name="drawer_header_name_text">Bienvenido %1$s</string>

</resources>
